portal/www/common/css/portal.css
/* ... */
#content {
  /* white space */
  background-color: #FFFFFF;
  padding-left: 60px;
  padding-right: 30px;
  padding-bottom: 30px;
  padding-top: 20px;
  margin-top: 0px;
  /* by default, let everything be serif 
     unless otherwise specified */
  font-family: 'PT Serif', serif;
  font-weight: 400;
  /* by default, let everything have a line
     height of 1.4em unless otherwise specified */
  line-height: 1.4em;
  /* side borders */
  border-left: 14px solid #DBD7CC;
}

/* Headers: use sans serif */
#content h1, h2, h3, h4, h5, h6, h7 {
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  text-shadow: 0.1em 0.1em 0.2em #dddddd;
  color: #E17000; /* official GENI orange */
}

/* Header spacing */
#content h1 {
  font-size: 1.8em;
  margin-top: 30px;
  margin-bottom: 20px;
  margin-left: 0px;
}
#content h2 {
  font-size: 1.4em;
  margin-top: 20px;
  margin-bottom: 15px;
  margin-left: 20px;
}
#content h3, h4, h5, h6, h7 {
  font-size: 1.1em;
  margin-top: 15px;
  margin-bottom: 10px;
  margin-left: 40px;
}

/* Bold: use sans serif */
#content b {
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
}

/* Paragraphs: use serif */
#content p {
  font-size: 1em;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 60px;
}

/* Lists */
#content li {
  font-size: 1em;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 60px;
}

/* inline lists should not have large left margin */
#content li li {
  margin-left: 0px;
}

/* Blocks of code */
#content pre {
  font-family: 'Open Sans Mono', monospace;
  font-weight: 400;
  font-size: .8em;
  line-height: 1.3em;
  background-color: #5F584E;
  color: #E5E5E5;
  padding: 5px;
  margin-left: 45px;
  border: 2px solid #E5E5E5;
  box-shadow: 3px 3px 10px #5F584E;
}

/* Inline code */
#content code, tt {
  font-family: 'Open Sans Mono', monospace;
  font-weight: 400;
}

/* Buttons */
#content button, input[type=submit], input[type=button] {
  /* make all buttons have bold text by default */
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  box-shadow: 0px 0px 5px #5F584E;
  margin: 2px;
}

/* Links */
#content a {
  color: #E17000; /* official GENI orange */
  border-bottom: 1px dashed #E17000;
  text-decoration:none;
}

#content a:hover {
  background-color: #E5E5E5;
  color: #E17000; /* official GENI orange */
  border-bottom: 1px dashed #E17000;
  text-decoration:none;
}

/* Tables */
#content table {
  background-color: #FFFFFF;
  border-collapse: collapse;
  text-align: left;
  margin-top: 20px;
  margin-bottom: 20px;
  line-height: 1.2em;
  margin-left: 60px;
  box-shadow: 4px 4px 10px #5F584E;
}

/* inline table should not have large left margin */
#content table table {
  margin-left: 0px;
}

#content th {
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
	font-size: 1em;
	padding: 6px;
	background: #E17000;
	border-top: 4px solid #5F584E;
	border-bottom: 1px solid #fff;
	color: #fff;
	vertical-align:middle;
}

#content td {
  font-family: 'PT Serif', serif;
  font-weight: 400;
  font-size: 0.9em;
	padding: 6px;
	background: #DBD7CC; 
	border-bottom: 1px solid #fff;
	color: #5F584E;
	border-top: 1px solid transparent;
	vertical-align:middle;
}

#content td a {
  color: #5F584E;
  border-bottom: 1px dashed #5F584E;
}

/*
  BREADCRUMB CONTAINER
*/
#breadcrumb {
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  color: #5F584E;
  background-image: url("../../images/geni_globe.png");
  background-size:30px auto;
  background-repeat:no-repeat;
  padding-left: 40px;
  min-height: 30px;
  border-bottom: 1px solid #E17000;
}

#breadcrumb a {
  text-decoration: none;
  border-bottom: 0px;
}

/*
  MAP CONTAINERS
*/

#map1 {
  color: #ffffff;
  /*  box-shadow: 3px 3px 10px #5F584E;*/
}

#map1 a {
  color: #ffffff;
  text-decoration: none;
  border-bottom: 0px;
}

#maptext {
  color: #5F584E;
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  padding: 5px;
}

#maptext h1 {
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  text-shadow: 0.1em 0.1em 0.2em #dddddd;
  color: #E17000;
  font-size: 1em;
  margin: 5px;
  line-height: 1.2em;
}

#maptext p {
  font-size: 0.7em;
  margin: 5px;
  padding-left: 15px;
  padding-top: 10px;
  padding-bottom: 10px;
  line-height: 1em;
}

#maptext ul {
  margin-left: 0px;
}

#maptext li {
  font-size: 0.7em;
  margin: 5px;
  line-height: 0.7em;
}

.olPopupContent {
    overflow: auto;
    padding: 0px;
}

#OpenLayers_Control_Zoom_5 a {
  color: #ffffff !important;
  border-bottom: none !important;
}

#OpenLayers_Control_Zoom_5 a:hover {
  color: #E17000 !important;
  background: transparent !important;
  border-bottom: none !important;
}

#OpenLayers_Control_Attribution_7 {
    padding: 5px;
    z-index: 1000;
    bottom: 0.2em !important;
    overflow: hidden;
    color: #5F584E;
    font-size: 0.8em !important;
    text-align: right;
}

#OpenLayers_Control_Attribution_7 a {
      color: #5F584E;
}


/*
  FOOTER CONTAINER
*/

#footer {
  padding-top: 15px;
  padding-bottom: 15px;
  padding-left:62px;
  padding-right:31px;
    /* center */
    margin-left: auto;
    margin-right: auto;
    width: 807px;
  margin-bottom: 30px;
  /* by default, let text be serif */
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  box-shadow: 0px 0px 10px #5F584E;
  background-color: #5F584E;
  color: #ffffff;
  overflow: auto;
}

#footer a {
  text-decoration: none;
  color: #ffffff;
  font-weight: 700;
}

#footer-left {
  float: left;
  text-align: left;
  width: 400px;
  font-size: 0.9em;
}

#footer-right {
  float: right;
  text-align: right;
  width: 400px;
  font-size: 0.8em;
  border-right: 2px solid #ffffff;
  padding-right: 15px;
}

.landingpage {
 width:10in;
 margin-left: auto;
 margin-right: auto;
}

div#geni{
 display: block;
 float: left;
 margin-left: .4in; 
 margin-right: .1in;
 margin-top: .2in;
}

div#geni img{
 width: 1in;
}
/* ... */

